# wiheomOS

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: allocator.rs  device_tree.rs  exception.rs  interrupt.rs  main.rs  page.rs  serial.rs
src/allocator/: buddy.rs  fixed_size_block.rs
