[package]
name = "wiheomOS"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv-rt = { version="0.15.0" , features=["s-mode"] }
panic-halt = "1.0.0"
uart_16550 = "0.3.2"
spin = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
riscv = { version = "0.14.0", features = ["s-mode"] }
riscv-peripheral = { version = "0.3.0" }
linked_list_allocator = "0.10.5"
page_table_multiarch = "0.5.5"
memory_addr = "0.4.0"
conquer-once = {version = "0.4.0", default-features = false}
fdt = "0.1.5"
